--- a/config/sync/core.entity_view_display.paragraph.private_documents.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.private_documents.default.yml
@@ -16,7 +16,7 @@ mode: default
 content:
   field_member_document:
     weight: 0
-    label: above
+    label: hidden
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
