--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -151,6 +151,7 @@ module:
   page_cache: 0
   paragraphs_preview_helper: 0
   path: 0
+  path_alias: 0
   pathologic: 0
   pdfpreview: 0
   quickedit: 0
