--- a/config/sync/search_api.index.solr_search.yml
+++ b/config/sync/search_api.index.solr_search.yml
@@ -2,37 +2,13 @@ uuid: ea430c29-b088-44bc-b648-439c67b34544
 langcode: en
 status: false
 dependencies:
+  config:
+    - field.storage.node.field_theme
+    - core.entity_view_mode.node.full
   module:
-    - search_api_solr
     - taxonomy
     - node
     - search_api
-  config:
-    - field.storage.node.field_theme
-    - search_api.server.default_solr_server
-    - core.entity_view_mode.node.full
-third_party_settings:
-  search_api_solr:
-    finalize: false
-    commit_before_finalize: false
-    commit_after_finalize: false
-    highlighter:
-      maxAnalyzedChars: 51200
-      fragmenter: gap
-      regex:
-        slop: 0.5
-        pattern: blank
-        maxAnalyzedChars: 10000
-      usePhraseHighlighter: true
-      highlightMultiTerm: true
-      preserveMulti: false
-      highlight:
-        mergeContiguous: false
-        requireFieldMatch: false
-        snippets: 3
-        fragsize: 0
-    advanced:
-      index_prefix: ''
 id: solr_search
 name: 'Solr search'
 description: ''
@@ -180,13 +156,10 @@ processor_settings:
       preprocess_index: -15
       preprocess_query: -15
   rendered_item: {  }
-  solr_date_range:
-    weights:
-      preprocess_index: 0
 tracker_settings:
   default:
     indexing_order: fifo
 options:
   index_directly: true
   cron_limit: 200
-server: default_solr_server
+server: null
