--- a/config/sync/core.entity_view_display.paragraph.sections.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.sections.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.sections.field_private_documents
     - field.field.paragraph.sections.field_section_block
     - field.field.paragraph.sections.field_section_description
     - field.field.paragraph.sections.field_section_display_options
@@ -18,6 +19,7 @@ dependencies:
   module:
     - block_field
     - ds
+    - entity_reference_revisions
     - text
     - viewfield
 id: paragraph.sections.default
@@ -25,6 +27,15 @@ targetEntityType: paragraph
 bundle: sections
 mode: default
 content:
+  field_private_documents:
+    type: entity_reference_revisions_entity_view
+    weight: 7
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    region: content
   field_section_block:
     weight: 6
     label: hidden
@@ -75,7 +86,7 @@ content:
     label: hidden
     settings:
       view_title: hidden
-      always_build_output: 0
+      always_build_output: false
       empty_view_title: hidden
     third_party_settings: {  }
     type: viewfield_default
