Sec. updates for Drupal core, BEF, webform. Also required pear/archive_tar

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "drupal/anchor_link": "^1.6",
         "drupal/back_to_top": "^1.0",
         "drupal/backup_migrate": "^4.0",
-        "drupal/better_exposed_filters": "^3.0@alpha",
+        "drupal/better_exposed_filters": "^5.0@beta",
         "drupal/block_class": "^1.0",
         "drupal/block_field": "^1.0-rc1",
         "drupal/bootstrap_barrio": "^4.22",
@@ -48,7 +48,7 @@
         "drupal/context_active_trail": "^1.0@RC",
         "drupal/convert_bundles": "^1.0@alpha",
         "drupal/convert_media_tags_to_markup": "^1.0@beta",
-        "drupal/core": "8.9.7",
+        "drupal/core": "^8.9.13",
         "drupal/csv_serialization": "^1.4",
         "drupal/ctools": "^3.2",
         "drupal/custom_add_another": "^1.0@beta",
@@ -142,10 +142,11 @@
         "drupal/views_data_export": "^1.0@beta",
         "drupal/views_fieldsets": "^3.3",
         "drupal/views_menu_children_filter": "^1.0@beta",
-        "drupal/webform": "^5.2",
+        "drupal/webform": "^5.25",
         "drupal/xmlsitemap": "^1.0@alpha",
         "drush/drush": "^9.7",
         "egulias/email-validator": "^2.0",
+        "pear/archive_tar": "^1.4.12",
         "platformsh/config-reader": "^2.2",
         "vlucas/phpdotenv": "^2.4",
         "webmozart/path-util": "^2.3",
